# JokenIPo

./: CMakeLists.txt  Fundo.tsx  Mapa_I.tmx  README.md  Tutorial com imagens.c  arena.c  audio.c  canvas.c  combat.c  enemy.c  game  game copy.c  game.c  items.c  jogo2novo  jogo2novo.c  jokenipo  load.c  main.c  map.c  map1.tmx  map10.tmx  map11.tmx  map2.tmx  map5.tmx  map6.tmx  personagensnovo  personagensnovo.c  resourcesIdx.h  run.bat  run.sh  screens.c  sprites.c  tile_map_drawing.c  tile_map_io.c  tileset_complet_obj.tsx  tuto.c  tutorialcomimagens.c  tutorialsemimagens.c
assets/: tileset_roguelite1.tsx
assets/audios/: musics.txt  sounds.txt
assets/musicas/: musics.txt
assets/textures/: Arma.png:com.dropbox.attrs  Esponja.png:com.dropbox.attrs  Fogo.png:com.dropbox.attrs  Humano.png:com.dropbox.attrs  Papel.png:com.dropbox.attrs  Pedra.png:com.dropbox.attrs  Tesoura.png:com.dropbox.attrs  Vento.png:com.dropbox.attrs  Água.png:com.dropbox.attrs
assets/tilemaps/: Fundo.tsx  Fundo_anm.tsx  Mapa_I.tmx  map.tmx  map1.tmx  map10.tmx  map11.tmx  map2.tmx  map3.tmx  map4.tmx  map5.tmx  map6.tmx  map7.tmx  map8.tmx  map9.tmx  tileset_complet.tsx  tileset_complet_anm.tsx  tileset_complet_obj.tsx  tileset_complet_updated.tsx  tileset_desert1.tsx  tileset_desert2.tsx  tileset_desert3.tsx  tileset_desert4.tsx  tileset_desert5.tsx  tileset_desert6.tsx  tileset_grave.tsx  tileset_graveyard.tsx  (+6 more)
include/: arena.h  audio.h  canvas.h  combat.h  config.h  enemy.h  exemplo_movimento.c  game.h  items.h  load.h  map.h  resourcesIdx.h  screens.h  sprites.h  tile_map.h
